--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "dev": "node ./node_modules/vite/bin/vite.js",
-    "build": "node ./node_modules/vite/bin/vite.js build",
+    "build": "node ./node_modules/vite/bin/vite.js build && node scripts/copy-404.js",
     "preview": "node ./node_modules/vite/bin/vite.js preview",
     "start": "node ./node_modules/vite/bin/vite.js --host"
   }
